--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Python CI
 
 on:
   push:
@@ -9,30 +9,39 @@ on:
       - main
 
 jobs:
-  test-and-scan:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout Code
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      # Step 2: Set Up Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
 
-      # Step 3: Install Dependencies
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    # Step 3: Install dependencies
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
 
-      # Step 4: Run Unit Tests
-      - name: Run Unit Tests
-        env:
-          PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
-        run: |
-          pytest tests/test_unit.py --tb=short
+    # Step 4: Prepare test environment
+    - name: Prepare test environment
+      run: |
+        mkdir -p /tmp/testdir
+        echo "test content" > /tmp/testdir/testfile.txt
+        mkdir -p /etc/quickbackup
+        echo "backup_paths: ['/tmp/testdir']" > /etc/quickbackup/config.yml
+        echo "s3_bucket: 'hybytes-rpm-repo'" >> /etc/quickbackup/config.yml
+
+    # Step 5: Run Unit Tests
+    - name: Run unit tests
+      env:
+        PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
+      run: pytest tests/test_unit.py --tb=short
+
+
 
