--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,14 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # Step 4: Prepare test environment
+    # Step 4: Set up AWS credentials
+    - name: Set up AWS credentials
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region us-east-1  # You can specify your region here
+
+    # Step 5: Prepare test environment
     - name: Prepare test environment
       run: |
         mkdir -p /tmp/testdir
@@ -39,49 +46,16 @@ jobs:
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
 
-    # Step 5: Run Unit Tests
+    # Step 6: Run Unit Tests
     - name: Run unit tests
       run: pytest tests/test_unit.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
 
-    # Step 6: Run Integration Tests
+    # Step 7: Run Integration Tests
     - name: Run integration tests
       run: pytest tests/test_integration.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
-        PYTHONPATH: ./src
-
-    # Step 7: Run System Tests
-    - name: Run system tests
-      run: pytest tests/test_system.py --tb=short
-      env:
-        CONFIG_PATH: /tmp/quickbackup/config.yml
-        PYTHONPATH: ./src
-
-    # Step 8: Run Performance Tests
-    - name: Run performance tests
-      run: pytest tests/test_performance.py --tb=short
-      env:
-        CONFIG_PATH: /tmp/quickbackup/config.yml
-        PYTHONPATH: ./src
-
-    # Step 9: Run Security Tests (e.g. Bandit)
-    - name: Run security validation tests
-      run: |
-        bandit -r ./src -o bandit_report.txt
-        cat bandit_report.txt  # Show the report in the output
-      env:
-        CONFIG_PATH: /tmp/quickbackup/config.yml
-
-    # Step 10: Run Dependency Scanning (e.g. Safety, Pip-audit)
-    - name: Run dependency vulnerability scan (Safety & Pip-audit)
-      run: |
-        safety check --full-report > safety_report.txt
-        pip-audit --output pip_audit_report.txt
-        cat safety_report.txt
-        cat pip_audit_report.txt
-      env:
-        CONFIG_PATH: /tmp/quickbackup/config.yml
-
+        PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
