--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,14 +28,22 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # Step 4: Set up AWS credentials
+    # Step 4: Install security validation tools
+    - name: Install security validation tools
+      run: |
+        pip install bandit
+        pip install lynis
+        pip install pip-audit
+        pip install safety
+
+    # Step 5: Set up AWS credentials
     - name: Set up AWS credentials
       run: |
         aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set default.region us-east-1  # You can specify your region here
+        aws configure set default.region us-east-1
 
-    # Step 5: Prepare test environment
+    # Step 6: Prepare test environment
     - name: Prepare test environment
       run: |
         mkdir -p /tmp/testdir
@@ -46,30 +54,28 @@ jobs:
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
 
-    # Step 6: Run Unit Tests
+    # Step 7: Run Unit Tests
     - name: Run unit tests
       run: pytest tests/test_unit.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
-        PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
+        PYTHONPATH: ./src
 
-    # Step 7: Run Integration Tests
+    # Step 8: Run Integration Tests
     - name: Run integration tests
       run: pytest tests/test_integration.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
-        PYTHONPATH: ./src  # Add the src directory to PYTHONPATH
+        PYTHONPATH: ./src
 
-
-
-    # Step 8: Run Performance Tests
+    # Step 9: Run Performance Tests
     - name: Run performance tests
       run: pytest tests/test_performance.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
 
-    # Step 9: Run Security Validation Tests (Bandit, Lynis, etc.)
+    # Step 10: Run Security Validation Tests (Bandit, Lynis, etc.)
     - name: Run security validation tests
       run: |
         bandit -r src/ -o bandit_report.html
