--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,9 +79,15 @@ jobs:
     - name: Run security validation tests
       run: |
         bandit -r src/backup.py -v
+      env:
+        CONFIG_PATH: /tmp/quickbackup/config.yml
+        PYTHONPATH: ./src
+    # Step 10: Run Security Validation Tests (Bandit, Lynis, etc.)
+    - name: Run security validation tests
+      run: |
         lynis audit system 
-        pip-audit 
-        safety check 
+        # pip-audit 
+        # safety check 
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
