--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,8 @@ on:
       - main
 
 jobs:
-  test:
+  # Job 1: Unit Tests
+  unit_test:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,22 +29,7 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    # Step 4: Install security validation tools (Bandit, Lynis, Pip-Audit, Safety)
-    - name: Install security validation tools
-      run: |
-        pip install bandit
-        pip install pip-audit
-        pip install safety
-        sudo apt-get update && sudo apt-get install -y lynis
-
-    # Step 5: Set up AWS credentials
-    - name: Set up AWS credentials
-      run: |
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws configure set default.region us-east-1
-
-    # Step 6: Prepare test environment
+    # Step 4: Prepare test environment
     - name: Prepare test environment
       run: |
         mkdir -p /tmp/testdir
@@ -54,64 +40,147 @@ jobs:
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
 
-    # Step 7: Run Unit Tests
+    # Step 5: Run Unit Tests
     - name: Run unit tests
       run: pytest tests/test_unit.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
 
-    # Step 8: Run Integration Tests
+
+  # Job 2: Integration Tests
+  integration_test:
+    runs-on: ubuntu-latest
+    needs: unit_test  # This job will only run after the unit_test job has completed successfully.
+
+    steps:
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
+
+    # Step 3: Install dependencies
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    # Step 4: Prepare test environment
+    - name: Prepare test environment
+      run: |
+        mkdir -p /tmp/testdir
+        echo "test content" > /tmp/testdir/testfile.txt
+        mkdir -p /tmp/quickbackup
+        echo "backup_paths: ['/tmp/testdir']" > /tmp/quickbackup/config.yml
+        echo "s3_bucket: 'hybytes-rpm-repo'" >> /tmp/quickbackup/config.yml
+      env:
+        CONFIG_PATH: /tmp/quickbackup/config.yml
+
+    # Step 5: Run Integration Tests
     - name: Run integration tests
       run: pytest tests/test_integration.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
 
-    # Step 9: Run Performance Tests
+
+  # Job 3: Performance Tests
+  performance_test:
+    runs-on: ubuntu-latest
+    needs: integration_test  # This job will only run after the integration_test job has completed successfully.
+
+    steps:
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
+
+    # Step 3: Install dependencies
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    # Step 4: Prepare test environment
+    - name: Prepare test environment
+      run: |
+        mkdir -p /tmp/testdir
+        echo "test content" > /tmp/testdir/testfile.txt
+        mkdir -p /tmp/quickbackup
+        echo "backup_paths: ['/tmp/testdir']" > /tmp/quickbackup/config.yml
+        echo "s3_bucket: 'hybytes-rpm-repo'" >> /tmp/quickbackup/config.yml
+      env:
+        CONFIG_PATH: /tmp/quickbackup/config.yml
+
+    # Step 5: Run Performance Tests
     - name: Run performance tests
       run: pytest tests/test_performance.py --tb=short
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
 
-    # # Step 10: Run S bandit Tests (Bandit, Lynis, etc.)
-    # - name: Run security validation tests
-    #   run: |
-    #     bandit -r src/backup.py -v
-    #   env:
-    #     CONFIG_PATH: /tmp/quickbackup/config.yml
-    #     PYTHONPATH: ./src
-    
-    # Step 10: Run Security Validation Tests (Bandit, Lynis, etc.)
-    # - name: Run security validation tests
-    #   run: |
-    #     lynis audit system 
-    #     # pip-audit 
-    #     # safety check 
-    #   env:
-    #     CONFIG_PATH: /tmp/quickbackup/config.yml
-    #     PYTHONPATH: ./src
-        
-    # Step 10: Run Security Validation Tests (pip-audit)         
-    - name: Run Security Validation Tests (pip-audit)
+
+  # Job 4: Security Validation Tests
+  security_validation:
+    runs-on: ubuntu-latest
+    needs: performance_test  # This job will only run after the performance_test job has completed successfully.
+
+    steps:
+    # Step 1: Checkout code
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
+
+    # Step 3: Install dependencies
+    - name: Install dependencies
       run: |
-         pip-audit 
-        # safety check 
+        pip install -r requirements.txt
+
+    # Step 4: Install security validation tools
+    - name: Install security validation tools
+      run: |
+        pip install bandit
+        pip install pip-audit
+        pip install safety
+        sudo apt-get update && sudo apt-get install -y lynis
+
+    # Step 5: Run Bandit Security Validation
+    - name: Run Bandit security validation
+      run: bandit -r src/backup.py -v
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
-    # Step 11: Run Security Validation Tests(safety check)       
-    - name: Run Security Validation Tests(safety check) 
-      run: |
-         safety check 
+
+    # Step 6: Run Lynis Security Validation
+    - name: Run Lynis security validation
+      run: lynis audit system --report-file=lynis_report.html
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
-    # Step 12: Run Security Validation Tess(Bandit)       
-    - name: Run Security Validation Tess(Bandit)
-      run: |
-         echo "Banit runs successfully..." 
+
+    # Step 7: Run pip-audit
+    - name: Run pip-audit
+      run: pip-audit --output=pip_audit_report.json
+      env:
+        CONFIG_PATH: /tmp/quickbackup/config.yml
+        PYTHONPATH: ./src
+
+    # Step 8: Run Safety check
+    - name: Run Safety check
+      run: safety check --output safety_report.json
       env:
         CONFIG_PATH: /tmp/quickbackup/config.yml
         PYTHONPATH: ./src
